force-app/main/default/objects/Timeline_Slide__c/Timeline_Slide__c.object-meta.xml
<CustomObject>
    <label>Timeline Slide</label>
    <nameField>
        <displayFormat>TLS-{0000}</displayFormat>
        <label>Timeline Slide Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Timeline Slides</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>