force-app/main/default/objects/Timeline_Slide__c/fields/Background_Color__c.field-meta.xml
<CustomField>
    <fullName>Background_Color__c</fullName>
    <inlineHelpText>Hex value or CSS color name.</inlineHelpText>
    <label>Background Color</label>
    <length>50</length>
    <type>Text</type>
</CustomField>