force-app/main/default/objects/Timeline_Slide__c/fields/Background_URL__c.field-meta.xml
<CustomField>
    <fullName>Background_URL__c</fullName>
    <inlineHelpText>URL of an image for the background.</inlineHelpText>
    <label>Background URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>