force-app/main/default/objects/Timeline_Slide__c/fields/Display_Date__c.field-meta.xml
<CustomField>
    <fullName>Display_Date__c</fullName>
    <inlineHelpText>Use this to override the usage of the start/end dates in the slide labeling. Useful if, for example, you want to display only the year and month of an event, but need to specify a specific day for historical accuracy.</inlineHelpText>
    <label>Display Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>