force-app/main/default/objects/Timeline_Slide__c/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <inlineHelpText>Allows grouping of events into, well, groups. They will display in the same band of the timeline, with the group's label at the beginning of the band.</inlineHelpText>
    <label>Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>