force-app/main/default/objects/Timeline_Slide__c/fields/Media_Alt_Tag_Text__c.field-meta.xml
<CustomField>
    <fullName>Media_Alt_Tag_Text__c</fullName>
    <description>For accessibility, will be read by screen readers and other assistive technologies.</description>
    <label>Media Alt Tag Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>