force-app/main/default/objects/Timeline_Slide__c/fields/Media_Caption__c.field-meta.xml
<CustomField>
    <fullName>Media_Caption__c</fullName>
    <label>Media Caption</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>