force-app/main/default/objects/Timeline_Slide__c/fields/Media_Credit__c.field-meta.xml
<CustomField>
    <fullName>Media_Credit__c</fullName>
    <label>Media Credit</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>