force-app/main/default/objects/Timeline_Slide__c/fields/Media_Thumbnail__c.field-meta.xml
<CustomField>
    <fullName>Media_Thumbnail__c</fullName>
    <label>Media Thumbnail</label>
    <type>Url</type>
</CustomField>