force-app/main/default/objects/Timeline_Slide__c/fields/Media_URL__c.field-meta.xml
<CustomField>
    <fullName>Media_URL__c</fullName>
    <description>Link to a video, google map, etc.</description>
    <label>Media URL</label>
    <type>Url</type>
</CustomField>