force-app/main/default/objects/Timeline_Slide__c/fields/Timeline__c.field-meta.xml
<CustomField>
    <fullName>Timeline__c</fullName>
    <label>Timeline</label>
    <referenceTo>Timeline__c</referenceTo>
    <relationshipLabel>Slides</relationshipLabel>
    <relationshipName>Timeline_Slides</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>